Refactor(MinioService): extracted file deletion into a separate method and replaced String.format with formatted